fix: consolidate CORS config and expose JWT headers in SecurityConfig